# tinyusd

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Readme.md  get_boost.sh  get_opensubdiv.sh  get_tbb.sh
cmake/: FindTBB.cmake  FindUsd.cmake  Utilities.cmake
flotsam/tbb/: macos.clang.inc
include/: tinyusd_SceneProxy.h
src/: main.cpp
src/TinyUSDTester/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneProxy.cpp  SceneProxy.h  ViewController.h  ViewController.m  ViewController.mm  main.m
src/TinyUSDTester.xcodeproj/: project.pbxproj
src/TinyUSDTester.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/TinyUSDTester.xcodeproj/xcshareddata/xcschemes/: TinyUSDTester.xcscheme
src/TinyUSDTester/Base.lproj/: Main.storyboard
src/TinyUSDTesterTests/: TinyUSDTesterTests.m
